# mdx-rest-client-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
doc/: .buildinfo  genindex.html  index.html  mdx_ext.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_static/: custom.css  documentation_options.js  print.css
docs/source/: conf.py  index.rst  mdx_ext.rst
examples/: commands.ipynb  deploy_vm.ipynb  deploy_vm_for_vcnode.ipynb
src/: __init__.py  mdx_ext.py  mdx_lib.py
