[project]
name = "mdx"
version = "0.1.0"
description = "Mdx client tool for python"
readme = ""
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
