[project]
name = "mdx"
version = "0.1.0"
description = "Mdx client tool for python"
readme = ""
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = { "mdx" = "src" }

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
